# Q1037375-Kumar-Viswajeet-Dissertation

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml
Questionnaire/: README.md  index.html
backend/: .env.example  Cargo.toml  Dockerfile  README.md
backend/src/: config.rs  main.rs  models.rs  state.rs
backend/src/handlers/: chat.rs  mod.rs  pdf.rs
backend/src/services/: database.rs  inference.rs  mod.rs  pdf.rs  pdf_service.rs
caddy/: Caddyfile  Caddyfile.prod  Dockerfile  README.md
database/: init.sql
frontend/: README.md  package.json  svelte.config.js
frontend/src/: app.css
inference/: Dockerfile  app.py  config.py  requirements.txt  schemas.py  test_models.py  test_v1_1_enterprise.py  test_v1_1_model.py  test_v1_2_model.py  test_v1_3_model.py
inference/services/: __init__.py  captioner.py  hazard_model_service.py  models.py  prediction.py  recommendation_service.py  translation.py  v1_2_model_service.py  v1_3_model_service.py
models/v1_1_candidate/: artifact_manifest_v1_1_candidate.csv  final_evaluation_summary_v1_1_candidate.csv  hazard_category_model_v1_1_candidate.joblib  hybrid_model_config_v1_1_candidate.json  model_card_v1_1_candidate.txt
models/v1_3_multilingual_accuracy_candidate/: embedding_config_v1_3.json  embedding_model_name.txt  enterprise_guardrail_config_v1_3.json  enterprise_policy_config_v1_3.json  final_test_metrics_v1_3.json  requirements_v1_3.txt  risk_rule_v1_3.json  runtime_inference_config_v1_3.json  (+6 more)
pdf-service/: Dockerfile  README.md  package-lock.json  package.json
(+20 files in other folders)
